Add recipes  and images

--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
           <div class="meal flex-v">
             <span class="meal-name">Vorspeise</span>
             <a href="./recipe-m.html?id=10001">
-              <img class="meals-picture" src="img/food/Breakfast/breakfast.jpg"/>
+              <img class="meals-picture" src="./img/food-m/appetizer-teaser.jpg"/>
             </a>
           </div>
           <div class="meal flex-v">
             <span class="meal-name">Hauptspeise</span>
             <a href="./recipe-m.html?id=10002"
-              ><img class="meals-picture" src="img/food/Main Meal/lunch.jpg"
+              ><img class="meals-picture" src="./img/food-m/meanmeal-teaser.jpg"
             /></a>
           </div>
           <div class="meal flex-v">
             <span class="meal-name">Dessert</span>
             <a href="./recipe-m.html?id=10003">
-              <img class="meals-picture" src="img/food/Desserts/dessert.jpg"/>
+              <img class="meals-picture" src="./img/food-m/dessertw-teaser.jpg"/>
             </a>
           </div>
         </div>
