add headline to menu area

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       <!-- #region welcome-section -->
       <section class="welcome-section">
         <h1>Willkommen auf Kochwelt</h1>
+        <h3>Suchst du ein 3-Gänge Menü?</h2>
         <div class="meals-selection flex-h content">
           <div class="meal flex-v">
             <span class="meal-name">Vorspeise</span>
@@ -191,7 +192,7 @@
           <div class="meal flex-v">
             <span class="meal-name">Dessert</span>
             <a href="./recipe-m.html?id=10003">
-              <img class="meals-picture" src="./img/food-m/dessertw-teaser.jpg"/>
+              <img class="meals-picture" src="./img/food-m/dessert-teaser.jpg"/>
             </a>
           </div>
         </div>
