optimize landingpage and add article section

--- a/index.html
+++ b/index.html
@@ -174,26 +174,49 @@
     <main>
       <!-- #region welcome-section -->
       <section class="welcome-section">
+        <div class="content">
         <h1>Willkommen auf Kochwelt</h1>
-        <h3>Suchst du ein 3-Gänge Menü?</h2>
-        <div class="meals-selection flex-h content">
-          <div class="meal flex-v">
-            <span class="meal-name">Vorspeise</span>
-            <a href="./recipe-m.html?id=10001">
-              <img class="meals-picture" src="./img/food-m/appetizer-teaser.jpg"/>
-            </a>
+        </div>
+      </section>
+      <!-- #endregion welcome-section -->
+
+      <!-- #region article-section -->
+      <section class="article-section">
+        <div class="content flex-v">
+          <div class="flex-h">
+            <img class="meals-picture" src="./img/food-m/gusspfanne-teaser.jpg" alt="">
+            <div class="article flex-v">
+              <h2>Warum eine Gusseisenpfanne?</h2>
+              <span>Gusseisenpfannen sind aufgrund ihrer hervorragenden Wärmespeicherung und -verteilung sehr beliebt. Sie eignen sich besonders gut zum scharfen Anbraten und für Gerichte, die eine konstante Temperatur über längere Zeit benötigen. Zusätzlich bildet sich mit der Zeit eine natürliche Antihaftbeschichtung, die sogenannte Patina, was die Pfanne vielseitig einsetzbar macht. </span>
+            </div>
           </div>
-          <div class="meal flex-v">
-            <span class="meal-name">Hauptspeise</span>
-            <a href="./recipe-m.html?id=10002"
-              ><img class="meals-picture" src="./img/food-m/meanmeal-teaser.jpg"
-            /></a>
-          </div>
-          <div class="meal flex-v">
-            <span class="meal-name">Dessert</span>
-            <a href="./recipe-m.html?id=10003">
-              <img class="meals-picture" src="./img/food-m/dessert-teaser.jpg"/>
-            </a>
+        </div>
+      </section>
+      <!-- #endregion article-section -->
+
+      <!-- #region welcome-section -->
+      <section class="course-menu-section">
+        <div class="flex-v content">
+          <h2>Suchst du ein 3-Gänge Menü?</h2>
+          <div class="meals-selection flex-h">
+            <div class="meal flex-v">
+              <span class="meal-name">Vorspeise</span>
+              <a href="./recipe-m.html?id=10001">
+                <img class="meals-picture" src="./img/food-m/appetizer-teaser.jpg"/>
+              </a>
+            </div>
+            <div class="meal flex-v">
+              <span class="meal-name">Hauptspeise</span>
+              <a href="./recipe-m.html?id=10002"
+                ><img class="meals-picture" src="./img/food-m/meanmeal-teaser.jpg"
+              /></a>
+            </div>
+            <div class="meal flex-v">
+              <span class="meal-name">Dessert</span>
+              <a href="./recipe-m.html?id=10003">
+                <img class="meals-picture" src="./img/food-m/dessert-teaser.jpg"/>
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -201,37 +224,27 @@
 
       <!-- #region inspiration-section -->
       <section class="inspiration-section">
-        <h2>Inspiration gefällig?</h2>
-        <div class="meals-selection flex-h content">
-          <div class="meal flex-v">
-            <!-- hier link zum rezept mit einfügen -->
-            <!-- hier später img austauschen mit den rezept bild -->
-            <a href="recipe-sites-Henry/Hänchencurry.html"
-              ><img
-                class="meals-picture"
-                src="img/food/Main Meal/Hähnchencurry.jpg"
-            /></a>
-            <span class="meal-name">Hähnchencurry</span>
-          </div>
-          <div class="meal flex-v">
-            <!-- hier link zum rezept mit einfügen -->
-            <!-- hier später img austauschen mit den rezept bild -->
-            <a href="recipe-sites-Henry/Gemüse-tofu-pfanne.html">
-              <img
-                class="meals-picture"
-                src="img/food/Main Meal/Tofu-Pfanne.jpg"
-            /></a>
-            <span class="meal-name">Tofu-Pfanne</span>
-          </div>
-          <div class="meal flex-v">
-            <!-- hier link zum rezept mit einfügen -->
-            <!-- hier später img austauschen mit den rezept bild -->
-            <a href="recipe-sites-Henry/Avocado-Ei-Sandwich.html"
-              ><img
-                class="meals-picture"
-                src="img/food/Breakfast/sandwich egg.jpg"
-            /></a>
-            <span class="meal-name">Avocado-Ei-Sandwich</span>
+        <div class="flex-v content">
+          <h2>Inspiration gefällig?</h2>
+          <div class="meals-selection flex-h">
+            <div class="meal flex-v">
+              <a href="recipe-sites-Henry/Hänchencurry.html">
+                <img class="meals-picture" src="img/food/Main Meal/Hähnchencurry.jpg"/>
+              </a>
+              <span class="meal-name">Hähnchencurry</span>
+            </div>
+            <div class="meal flex-v">
+              <a href="recipe-sites-Henry/Gemüse-tofu-pfanne.html">
+                <img class="meals-picture" src="img/food/Main Meal/Tofu-Pfanne.jpg"/>
+              </a>
+              <span class="meal-name">Tofu-Pfanne</span>
+            </div>
+            <div class="meal flex-v">
+              <a href="recipe-sites-Henry/Avocado-Ei-Sandwich.html">
+                <img class="meals-picture" src="img/food/Breakfast/sandwich egg.jpg"/>
+              </a>
+              <span class="meal-name">Avocado-Ei-Sandwich</span>
+            </div>
           </div>
         </div>
       </section>
