fix footer on recipe pages

--- a/recipe-sites-Henry/Gemüse-tofu-pfanne.html
+++ b/recipe-sites-Henry/Gemüse-tofu-pfanne.html
@@ -371,7 +371,7 @@
     <!-- #region Footer -->
     <footer class="flex-h">
       <div class="footer-content content">
-        <div>
+        <div class="flex-h">
           <!-- Img führt zur Startseite-->
           <a href="../index.html">
             <img src="../img/logo_small_white.png" alt="" />
